--- a/app/sass/components/_listOfCategories.scss
+++ b/app/sass/components/_listOfCategories.scss
@@ -31,6 +31,8 @@
       box-shadow: 1px 1px 2px 2px $header-color;
       transition: background-color .5s ease;
       cursor: pointer;
+      word-wrap: break-word;
+      overflow: hidden;
 
       &:hover {
         background-color: $header-color;
